[gd_scene load_steps=7 format=3 uid="uid://ysnaiwx8s6vy"]

[ext_resource type="Script" path="res://scripts/UI/DjinnMenu/djinn_menu.gd" id="1_cyqpn"]
[ext_resource type="Script" path="res://scripts/UI/DjinnMenu/DjinnParty.gd" id="2_yvd67"]
[ext_resource type="Texture2D" uid="uid://cepui3luq6hl0" path="res://art/TBCharacters/PlayerCharacter/djinn pixel art.png" id="2_yyi7f"]
[ext_resource type="Script" path="res://scripts/UI/DjinnMenu/SpellList.gd" id="3_0ij3d"]
[ext_resource type="Script" path="res://scripts/UI/DjinnMenu/SpellContainer.gd" id="3_bdkkv"]
[ext_resource type="Script" path="res://scripts/UI/DjinnMenu/DjinnSingle.gd" id="3_opu1g"]

[node name="DjinnMenu" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_cyqpn")

[node name="DjinnParty" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -79.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_yvd67")

[node name="Djinn1" type="TextureRect" parent="DjinnParty"]
layout_mode = 2
stretch_mode = 3

[node name="Label1" type="Label" parent="DjinnParty/Djinn1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "lvl 1"

[node name="Button1" type="Button" parent="DjinnParty"]
layout_mode = 2

[node name="Djinn2" type="TextureRect" parent="DjinnParty"]
layout_mode = 2
stretch_mode = 3

[node name="Label2" type="Label" parent="DjinnParty/Djinn2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "lvl 1"

[node name="Button2" type="Button" parent="DjinnParty"]
layout_mode = 2

[node name="Djinn3" type="TextureRect" parent="DjinnParty"]
layout_mode = 2
stretch_mode = 3

[node name="Label3" type="Label" parent="DjinnParty/Djinn3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "lvl 1"

[node name="Button3" type="Button" parent="DjinnParty"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="DjinnParty"]
layout_mode = 2
text = "BACK"

[node name="DjinnSingle" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
offset_right = 160.0
offset_bottom = 133.0
script = ExtResource("3_opu1g")

[node name="TextureRect" type="TextureRect" parent="DjinnSingle"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.11
texture = ExtResource("2_yyi7f")
stretch_mode = 2

[node name="Label" type="Label" parent="DjinnSingle"]
layout_mode = 2
text = "Lightning Djinn"
horizontal_alignment = 1

[node name="SpellContainer" type="HBoxContainer" parent="DjinnSingle"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_bdkkv")

[node name="Skill1Button" type="Button" parent="DjinnSingle/SpellContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Skill2Button" type="Button" parent="DjinnSingle/SpellContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="DjinnSingle"]
layout_mode = 2
text = "BACK"

[node name="SpellList" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_right = 156.0
offset_bottom = 191.0
scale = Vector2(0.687596, 0.696121)
script = ExtResource("3_0ij3d")

[node name="OpenMenu" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Open"

[connection signal="pressed" from="DjinnParty/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="DjinnParty/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="DjinnParty/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="DjinnParty/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="DjinnSingle/SpellContainer/Skill1Button" to="DjinnSingle" method="_on_skill_1_button_pressed"]
[connection signal="pressed" from="DjinnSingle/SpellContainer/Skill2Button" to="DjinnSingle" method="_on_skill_2_button_pressed"]
[connection signal="pressed" from="DjinnSingle/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_activated" from="SpellList" to="DjinnSingle" method="_on_spell_list_item_activated"]
[connection signal="pressed" from="OpenMenu" to="." method="_on_open_menu_pressed"]
